Resolve "Make config view scrollable"
Closes #2162

See merge request main/Sumatra!2164

sumatra-commit: 04cfa6290fe043facefaa9efd783409c9f9c200c